tests/positive/result_guarded_access.safe
-- Test: result_guarded_access
-- Description: Discriminated result with guarded variant field access.
--   The conditional branch on R.OK establishes the discriminant value,
--   making R.Value and R.Error accessible in their respective branches.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: ACCEPT

package Result_Guarded_Access

   type Error_Code is range 0 to 255;

   type Parse_Result (OK : Boolean = False) is record
      case OK
         when True
            Value : Integer;
         when False
            Error : Error_Code;



   function Try_Parse (Input : Integer) returns Parse_Result

      if Input >= 0
         return (OK = True, Value = Input);
      else
         return (OK = False, Error = 1);



   --  Get_Or_Default: guarded access to variant fields.
   --  The branch on R.OK establishes the discriminant in each arm.
   function Get_Or_Default (Input : Integer;
                            Default : Integer) returns Integer
      R : Parse_Result = Try_Parse (Input);

      if R.OK
         return R.Value;   -- legal: R.OK = True established
      else
         return Default;




