tests/negative/neg_result_unguarded.safe
-- Test: neg_result_unguarded
-- Description: Unguarded access to variant field of discriminated result.
--   Accessing R.Value without establishing R.OK = True violates the
--   discriminant-check safety rule. The compiler must reject this.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.12.p148
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.6.p139f
-- Expected: REJECT discriminant_check_not_established

package Neg_Result_Unguarded

   type Error_Code is range 0 to 255;

   type Parse_Result (OK : Boolean = False) is record
      case OK
         when True
            Value : Integer;
         when False
            Error : Error_Code;



   function Try_Parse (Input : Integer) returns Parse_Result

      if Input >= 0
         return (OK = True, Value = Input);
      else
         return (OK = False, Error = 1);



   --  NONCONFORMING: accesses R.Value without establishing R.OK = True.
   --  The discriminant check cannot be discharged statically.
   function Unsafe_Access (Input : Integer) returns Integer
      R : Parse_Result = Try_Parse (Input);

      return R.Value;  -- REJECTED: R.OK not established



